<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <group android:id="@+id/drawing_controls" android:orderInCategory="2" android:enabled="true" android:checkableBehavior="none" android:visible="true" android:menuCategory="system">
        <item android:id="@+id/clear" android:orderInCategory="1" android:checkable="false" android:visible="true" android:checked="false" android:title="@string/button_clear" android:showAsAction="always" android:enabled="true" android:icon="@drawable/ic_action_clear"></item>
        <item android:id="@+id/check" android:orderInCategory="2" android:checkable="false" android:visible="true" android:checked="false" android:title="@string/button_check" android:enabled="true" android:titleCondensed="@string/button_submit" android:showAsAction="always|withText"></item>
    </group>

</menu>