<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/hiragana"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:drawableTop="@drawable/a_icon"
        android:onClick="hiragana"
        android:text="@string/hiragana" />

    <Button
        android:id="@+id/kanji"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:layout_alignBaseline="@+id/katakana"
        android:layout_alignBottom="@+id/katakana"
        android:layout_alignParentRight="true"
        android:drawableTop="@drawable/year_icon"
        android:onClick="kanji"
        android:text="@string/kanji" />

    <Button
        android:id="@+id/katakana"
        android:layout_width="110dp"
        android:layout_height="115dp"
        android:layout_alignBaseline="@+id/hiragana"
        android:layout_alignBottom="@+id/hiragana"
        android:layout_centerHorizontal="true"
        android:drawableTop="@drawable/a_kata_icon"
        android:onClick="katakana"
        android:text="@string/katakana" />

</RelativeLayout>